syntax = "proto3";

package atc.v1;

message GetGameStateRequest {}

message GetGameStateResponse {
  enum GameState {
    GAME_STATE_UNSPECIFIED = 0;
    GAME_STATE_READY = 1;
    GAME_STATE_RUNNING = 2;
  }
  GameState game_state = 1;
}

service GameService {
  rpc GetGameState(GetGameStateRequest) returns (GetGameStateResponse);
}
